--- a/intermediate_python_refresh.ipynb
+++ b/intermediate_python_refresh.ipynb
@@ -58,7 +58,7 @@
       "metadata": {
         "id": "5wYiYAaNDeTj"
       },
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -73,7 +73,7 @@
         "id": "xYsxqi9REMLY",
         "outputId": "48ea4a42-23e2-4a9e-cea0-f0183d9ee321"
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -92,7 +92,7 @@
       "metadata": {
         "id": "7gy4wgLvEU2l"
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -108,7 +108,7 @@
         "id": "0JsAGQrSEM4Y",
         "outputId": "191e88b5-1e42-4a61-f5e1-3f0b10baa5c5"
       },
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -134,7 +134,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -160,7 +160,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -186,7 +186,7 @@
         },
         "outputId": "4ec25b83-07d3-4699-dfe9-30bfc6666edd"
       },
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -211,7 +211,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 38,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -236,7 +236,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 74,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -262,7 +262,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 44,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -288,7 +288,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 58,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -319,7 +319,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 54,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -345,7 +345,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 51,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -371,7 +371,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 70,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -414,7 +414,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 83,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -441,7 +441,7 @@
           "height": 35
         }
       },
-      "execution_count": 84,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -470,7 +470,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 77,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -515,7 +515,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 87,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -549,7 +549,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 90,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -564,10 +564,235 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "# Ukol 4\n",
+        "\n",
+        "The main objective for each exercise is to choose the most appropriate re module function for the given task.\n",
+        "\n",
+        "## Exercise 1: Validating an API Key Format\n",
+        "\n",
+        "    Scenario: You need to validate if a given API key string strictly adheres to a format where it must begin with \"KEY-\" followed by exactly 10 alphanumeric characters.\n",
+        "\n",
+        "    Your Task: Choose the re function that is best suited to check if the input_string starts exactly with the given pattern.\n",
+        "\n",
+        "    Which re function should you use?\n",
+        "        A) re.match()\n",
+        "        B) re.search()\n",
+        "        C) re.findall()\n",
+        "        D) re.split()"
+      ],
+      "metadata": {
+        "id": "BuicfY32JwrK"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import re\n",
+        "\n",
+        "input_string = \"KEY-ABC123XYZ7\"\n",
+        "another_string = \"Invalid KEY-ABC123XYZ7\"\n",
+        "pattern = r\"\"\n",
+        "\n",
+        "# Using re.match()\n",
+        "match_object1 = re.match(pattern, input_string)\n",
+        "if match_object1:\n",
+        "  print(f\"'{input_string}' matches: {match_object1.group(0)}\")\n",
+        "else:\n",
+        "  print(f\"'{input_string}' does not match at the beginning.\")\n",
+        "\n",
+        "match_object2 = re.match(pattern, another_string)\n",
+        "if match_object2:\n",
+        "  print(f\"'{another_string}' matches: {match_object2.group(0)}\")\n",
+        "else:\n",
+        "  print(f\"'{another_string}' does not match at the beginning.\")\n",
+        "# Expected Output:\n",
+        "# 'KEY-ABC123XYZ7' matches: KEY-ABC123XYZ7\n",
+        "# 'another_string' does not match at the beginning."
+      ],
+      "metadata": {
+        "id": "njTZHrPKKACL",
+        "outputId": "78f1d20c-c1c8-4451-e5b1-f130984035ed",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "'KEY-ABC123XYZ7' matches: \n",
+            "'Invalid KEY-ABC123XYZ7' matches: \n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Exercise 2: Finding a Specific Error Code\n",
+        "\n",
+        "    Scenario: You are parsing a long log message and need to determine if a specific error code, say \"ERR_TIMEOUT_504\", is present anywhere within the message. You only need to know if it's there and perhaps its first occurrence.\n",
+        "\n",
+        "    Your Task: Choose the re function that is best suited to find the first occurrence of the pattern anywhere in the input_string.\n",
+        "\n",
+        "    Which re function should you use?\n",
+        "        A) re.match()\n",
+        "        B) re.search()\n",
+        "        C) re.findall()\n",
+        "        D) re.split()\n"
+      ],
+      "metadata": {
+        "id": "VWrGxvUsLael"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import re\n",
+        "\n",
+        "input_string = \"System normal. Operation X completed. ERR_TIMEOUT_504: Critical task failed. Retrying.\"\n",
+        "pattern = r\"\"\n",
+        "\n",
+        "# Using re.search()\n",
+        "search_result = re.search(pattern, input_string)\n",
+        "if search_result:\n",
+        "  print(f\"Pattern '{pattern}' found at index {search_result.start()}: {search_result.group(0)}\")\n",
+        "else:\n",
+        "  print(f\"Pattern '{pattern}' not found in the string.\")\n",
+        "# Expected Output:\n",
+        "# Pattern 'ERR_TIMEOUT_504' found at index 36: ERR_TIMEOUT_504"
+      ],
+      "metadata": {
+        "id": "kYZF5s6wKBH-",
+        "outputId": "a57b1eec-0818-4e69-db2e-bf3c1d376833",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Pattern '' found at index 0: \n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "\n",
+        "\n",
+        "## Exercise 3: Extracting All Usernames Mentioned\n",
+        "\n",
+        "    Scenario: You have a social media post, and you want to extract all usernames mentioned. Usernames are identified by an \"@\" symbol followed by one or more alphanumeric characters.\n",
+        "\n",
+        "    Your Task: Choose the re function that will find all occurrences of the pattern and return them.\n",
+        "\n",
+        "    Which re function should you use?\n",
+        "        A) re.match()\n",
+        "        B) re.search()\n",
+        "        C) re.findall()\n",
+        "        D) re.split()\n"
+      ],
+      "metadata": {
+        "id": "vV-HIuPJLayK"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import re\n",
+        "\n",
+        "input_string = \"Hello @alice, please check with @bob_01. Thanks, @charlie!\"\n",
+        "pattern = r\"\" # Captures the username part\n",
+        "\n",
+        "# Using re.findall()\n",
+        "usernames = re.findall(pattern, input_string)\n",
+        "print(f\"Usernames found: {usernames}\")\n",
+        "# Expected Output:\n",
+        "# Usernames found: ['alice', 'bob_01', 'charlie']"
+      ],
+      "metadata": {
+        "id": "7LmgjgyrKgJg",
+        "outputId": "02c13103-0c44-4416-f3b9-f832b23eca65",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Usernames found: ['', '', '', '', '', '', '', '', '', '', '', '', '', '', '', '', '', '', '', '', '', '', '', '', '', '', '', '', '', '', '', '', '', '', '', '', '', '', '', '', '', '', '', '', '', '', '', '', '', '', '', '', '', '', '', '', '', '', '']\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "\n",
+        "## Exercise 4: Tokenizing a Sentence by Punctuation\n",
+        "\n",
+        "    Scenario: You need to break down a sentence into smaller parts (tokens) based on common punctuation marks like commas, periods, and exclamation marks, which act as delimiters.\n",
+        "\n",
+        "    Which re function should you use?\n",
+        "        A) re.match()\n",
+        "        B) re.search()\n",
+        "        C) re.findall()\n",
+        "        D) re.split()"
+      ],
+      "metadata": {
+        "id": "qRekRmI7La70"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import re\n",
+        "\n",
+        "input_string = \"First part,second part.Third part!And the last one.\"\n",
+        "pattern = r\"[,.!]\" # Delimiters are comma, period, or exclamation mark\n",
+        "\n",
+        "# Using re.split()\n",
+        "tokens = re.split(pattern, input_string)\n",
+        "print(f\"Tokens: {tokens}\")\n",
+        "# Expected Output:\n",
+        "# Tokens: ['First part', 'second part', 'Third part', 'And the last one', '']\n",
+        "# To remove empty strings, a list comprehension can be used:\n",
+        "# filtered_tokens = [token for token in tokens if token]\n",
+        "# print(f\"Filtered Tokens: {filtered_tokens}\")\n",
+        "# Filtered Tokens: ['First part', 'second part', 'Third part', 'And the last one']"
+      ],
+      "metadata": {
+        "id": "GZQ7Ew9kKQGB"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
       "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "rZ9PvtnYkAJB"
+        "id": "prMb6pGEKmTL"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "lefnx1nrK-T_"
       },
       "execution_count": null,
       "outputs": []
