--- a/intermediate_python_refresh.ipynb
+++ b/intermediate_python_refresh.ipynb
@@ -612,11 +612,11 @@
         "# 'another_string' does not match at the beginning."
       ],
       "metadata": {
-        "id": "njTZHrPKKACL",
-        "outputId": "78f1d20c-c1c8-4451-e5b1-f130984035ed",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "njTZHrPKKACL",
+        "outputId": "78f1d20c-c1c8-4451-e5b1-f130984035ed"
       },
       "execution_count": 3,
       "outputs": [
@@ -667,11 +667,11 @@
         "# Pattern 'ERR_TIMEOUT_504' found at index 36: ERR_TIMEOUT_504"
       ],
       "metadata": {
-        "id": "kYZF5s6wKBH-",
-        "outputId": "a57b1eec-0818-4e69-db2e-bf3c1d376833",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "kYZF5s6wKBH-",
+        "outputId": "a57b1eec-0818-4e69-db2e-bf3c1d376833"
       },
       "execution_count": 2,
       "outputs": [
@@ -720,11 +720,11 @@
         "# Usernames found: ['alice', 'bob_01', 'charlie']"
       ],
       "metadata": {
-        "id": "7LmgjgyrKgJg",
-        "outputId": "02c13103-0c44-4416-f3b9-f832b23eca65",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "7LmgjgyrKgJg",
+        "outputId": "02c13103-0c44-4416-f3b9-f832b23eca65"
       },
       "execution_count": 1,
       "outputs": [
@@ -783,16 +783,167 @@
       "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "prMb6pGEKmTL"
+        "id": "zM-LxoM0R8My"
       },
       "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
+      "source": [
+        "import threading\n",
+        "\n",
+        "\n",
+        "def iterate_print(iter):\n",
+        "    # A function prints the elements of a list\n",
+        "    for item in iter:\n",
+        "        print(item)"
+      ],
+      "metadata": {
+        "id": "QTgZbVIKR8vd"
+      },
+      "execution_count": 4,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "t1 = threading.Thread(target=iterate_print, args=(range(5),))  # writing out successive natural numbers\n",
+        "t2 = threading.Thread(target=iterate_print, args=(\"Python\",))  # writing the characters of the string"
+      ],
+      "metadata": {
+        "id": "zaAdP5-QR9Xw"
+      },
+      "execution_count": 8,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "%timeit\n",
+        "# starting threads\n",
+        "t1.start()\n",
+        "t2.start()\n",
+        "\n",
+        "# waiting until both threads have finished executing before executing further code\n",
+        "t1.join()\n",
+        "t2.join()"
+      ],
+      "metadata": {
+        "id": "FFbumrkISAZ9",
+        "outputId": "357a9663-9d6b-494b-de4b-aa5dcc606d6e",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "0\n",
+            "1\n",
+            "2\n",
+            "3\n",
+            "4\n",
+            "P\n",
+            "y\n",
+            "t\n",
+            "h\n",
+            "o\n",
+            "n\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import timeit\n",
+        "import requests\n",
+        "\n",
+        "\n",
+        "def crawl(url, dest):\n",
+        "    try:\n",
+        "        result = requests.get(url).text\n",
+        "        with open(dest, \"a\") as f:\n",
+        "            f.write(result)\n",
+        "\n",
+        "    except requests.exceptions.RequestException:\n",
+        "        print(\"Error with URL check!\")\n",
+        "\n",
+        "\n",
+        "def wo_threading_func(urls):\n",
+        "    for url in urls:\n",
+        "        crawl(url, \"without_threads.txt\")\n",
+        "\n",
+        "\n",
+        "def with_threading_func(urls):\n",
+        "    import threading\n",
+        "\n",
+        "    threads = []\n",
+        "    for url in urls:\n",
+        "        th = threading.Thread(target=crawl, args=(url, \"with_threads.txt\"))\n",
+        "        th.start()\n",
+        "        threads.append(th)\n",
+        "\n",
+        "    for th in threads:\n",
+        "        th.join()"
+      ],
+      "metadata": {
+        "id": "76-GxLBjSGFL"
+      },
+      "execution_count": 11,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "wo_threading = \"wo_threading_func(urls)\"\n",
+        "with_threading = \"with_threading_func(urls)\"\n",
+        "\n",
+        "setup = '''\n",
+        "from __main__ import wo_threading_func, with_threading_func\n",
+        "\n",
+        "urls = [\n",
+        "    \"https://jsonplaceholder.typicode.com/comments/1\",\n",
+        "    \"https://jsonplaceholder.typicode.com/comments/2\",\n",
+        "    \"https://jsonplaceholder.typicode.com/comments/3\"\n",
+        "]\n",
+        "    '''\n",
+        "\n",
+        "print(\"Without threads:\", timeit.timeit(stmt=wo_threading,\n",
+        "                                        setup=setup,\n",
+        "                                        number=100))\n",
+        "print(\"With threads:\", timeit.timeit(stmt=with_threading,\n",
+        "                                      setup=setup,\n",
+        "                                      number=100))"
+      ],
+      "metadata": {
+        "id": "clAUOHYOSV87",
+        "outputId": "706c1976-4c27-4d3e-e042-42f735d62b49",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Without threads: 11.313721823999913\n",
+            "With threads: 4.848324849000164\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "lefnx1nrK-T_"
+        "id": "MOUgfd8wSbK_"
       },
       "execution_count": null,
       "outputs": []
